Remove onclick in HTML and make functionality all JavaScript

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav id="main-nav" class="row centered space-bet main-margin">
         <h2 id="main-title">Dojonary</h2>
         <input type="text" name="search" id="main-search-bar" placeholder="Search" class="blk-border">
-        <button id="log-btn" class="blk-border blk-shadow-1" onclick="logClick(this)">Login</button>
+        <button id="log-btn" class="blk-border blk-shadow-1">Login</button>
     </nav>
     <main class="main-margin row def-margin-top">
         <div id="main-content" class="col-3 column def-margin-right">
@@ -20,7 +20,7 @@
                     <h2 class="main-word">ninja</h2>
                     <em class="fig-of-speech">noun</em>
                     <p class="plural-form">Plural: <em>ninjas</em></p>
-                    <button class="like-btn blk-border blk-shadow-1" onclick="likeClick()">13 likes</button>
+                    <button class="like-btn blk-border blk-shadow-1">13 likes</button>
                 </div>
                 <div class="definition-container row centered">
                     <p class="dict-definition">A practitioner skilled in the <a href="#">Japanese</a> art of <a href="#">ninjutsu</a></p>
@@ -31,7 +31,7 @@
                     <h2 class="main-word">ninja</h2>
                     <em class="fig-of-speech">noun</em>
                     <p class="plural-form">Plural: <em>ninjas</em></p>
-                    <button class="like-btn blk-border blk-shadow-1" onclick="likeClick()">37 likes</button>
+                    <button class="like-btn blk-border blk-shadow-1">37 likes</button>
                 </div>
                 <div class="definition-container row centered">
                     <p class="dict-definition">A <a href="#">programmer</a> who breaks down problems with <a href="#">zen</a>-like focus</p>
@@ -42,7 +42,7 @@
         <div id="side-content" class="col-1">
             <div class="right-sidemenu blk-border column def-inner-padding">
                 <h2>Dojonary is defined by <strong>YOU</strong></h2>
-                <button id="definition-btn" class="blk-border blk-shadow-1" onclick="removeElem(this)">Add Definition</button>
+                <button id="definition-btn" class="blk-border blk-shadow-1">Add Definition</button>
             </div>
         </div>
     </main>
